Issue ID 0000375:   o Line too long   o Use paragraph
Merge BSF r1413:1414 into branch-1_6

git-svn-id: http://piwigo.org/svn/trunk@1418 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/default-colors.css
+++ b/template/yoga/default-colors.css
@@ -76,7 +76,8 @@ INPUT[type="radio"] {	/* for Opera */
   font-weight: bold;
   color:#696969;	/* dimgray */
   background-color: #d3d3d3;
-  margin: 5px;
+  margin: 1px;
+  padding: 1px;
 }
 
 LEGEND {
